updates from advisor feedback and general development of all sections

--- a/appendix.tex
+++ b/appendix.tex
@@ -11,7 +11,9 @@
     showspaces=false,
     showtabs=false
 }
-Listed below is C code which processes a \gls{merra} data file and stores it within a simple SQLite database \cite{keller1}. Every data type would have a similar parser, typically written in Python for ease of development. However given the complex structure of the \gls{merra} format, combined with the size of the data set, it is reasonable to spend the time to develop it in C to gain execution speed. Processing a single day of \gls{merra} (300MB) and writing into an SQLite flat file takes approximately 20 seconds per variable with the listed code on a modern CPU. Similar code in Python was taking several hours to complete. The entire thirty-three year \gls{merra} archive would take approximately one week to ingest, running in parallel. 
+Listed below is C code which processes a \gls{merra} data file and stores it within a simple SQLite database \cite{hdf}. Every data type would have a similar parser, typically written in Python for ease of development. However given the complex structure of the \gls{merra} format, combined with the size of the data set, it is reasonable to spend the time to develop it in C to gain execution speed.  The entire thirty-three year \gls{merra} archive would take approximately one week to ingest as a one time cost, running in parallel. \\
+
+After the \gls{merra} parser, a simple implementation of MapReduce is provided in Python, that demonstrates how a histogram would be calculated based on word occurrences in a text file.  This is the canonical first MapReduce program that someone might produce. It divides the task into both Mapper and Reducer jobs and is designed to run on a single core. More advanced implementations would be run over multiple cores in a distributed cluster.
  
 \lstinputlisting{/Users/christopher/Documents/work/Climatalytics/prototype/source/merra/c/geo_point.h}
 \hrule
