--- a/bibliography.bib
+++ b/bibliography.bib
@@ -82,7 +82,22 @@
     year = 2013,
     howpublished = {\url{https://c3.csc.com/groups/point-in-developmen?view=over}},
     note = "Online; accessed 10-March-2013"
-}@misc {hdf,
+}
+@misc{exceed,
+    author = {CSC},
+    title = {{Exceed}},
+    year = 2013,
+    howpublished = {\url{http://www.csc.com/p_and_c_general_insurance/offerings/26121/57318-exceed}},
+    note = "Online; accessed 20-March-2013"
+}
+@misc{integral,
+    author = {CSC},
+    title = {{Integral}},
+    year = 2013,
+    howpublished = {\url{http://www.csc.com/insurance/offerings/11097/47685-integral}},
+    note = "Online; accessed 20-March-2013"
+}
+@misc {hdf,
     howpublished = "\url{http://disc.sci.gsfc.nasa.gov/mdisc/data-holdings/merra/merra_products_nonjs.shtml}",
     title ={{MERRA Products}},
     author = {NASA Goddard Earth Science Data and Information Services Center},
@@ -90,7 +105,7 @@
     note = "Online; accessed 4-January-2013"
 }
 @misc{stonebraker,
-    author = {Stonebraker, M.},
+    author = {Stonebraker, Michael},
     title = {{What Does 'Big Data' Mean?}},
     number = {September 21},
     month = {September},
@@ -128,7 +143,8 @@
     author = {Keller, Christopher N.},
     title = {{MERRA Processing in C}},
     year = 2013,
-    note = "Unpublished"
+    howpublished ={\url{https://github.com/christopherkeller/}},
+    note = "Online; accessed 28-February-2013"
 }
 @misc{keller2,
     author = {Keller, Christopher N.},
@@ -157,4 +173,55 @@
     howpublished = {\url{http://xen.org/products/xenhyp.html}},
     note = "Online; accessed 18-March-2013"
 }
-
+@inproceedings{stalder,
+    author = {Stalder, Iwan},
+    title = {{Extreme Weather Insurance Risk Management Congress}},
+    booktitle = {{Weather the Storms in a World of Change}},
+    year = 2013,
+}
+@misc{walker,
+    author = {Walker, Dan and Christopher Anderson},
+    year = 2012,
+    note = "Unpublished interviews; 2012 - 2013"
+}
+@misc{bizcloud,
+    author = {CSC},
+    title = {{CSC BizCloud Service Definition}},
+    year = 2011,
+    howpublished = {CSC C3},
+    note = "Online; accessed 18-March-2013"
+}
+@misc {hdf,
+    howpublished = "\url{http://disc.sci.gsfc.nasa.gov/mdisc/data-holdings/merra/merra_products_nonjs.shtml}",
+    title ={{MERRA Products}},
+    author = {NASA Goddard Earth Science Data and Information Services Center},
+    year = 2013,
+    note = "Online; accessed 4-January-2013"
+}
+@misc {quantum,
+    title ={{Moving insight into the next dimension}},
+    author = {Quantum4D},
+    year = 2012,
+    howpublished = "\url{http://www.quantum4d.com}",
+    note = "Online; accessed 24-March-2013"
+}
+@inbook {fairweather,
+    author={Committee on Partnerships in Weather and Climate Services, Committee on Geophysical and Environmental Data, National Research Council},
+    title={{Fair Weather: Effective Partnerships in Weather and Climate Services}},
+    publisher={The National Academies Press},
+    chapter=4,
+    year=2003
+}
+@techreport {duffy,
+author={Duffy, Daniel Q. and John L. Schnase and John H. Thompson and Shawn M. Freeman and Thomas L. Clune},
+title={{Preliminary Evaluation of MapReduce for High-Performance Climate Data Analysis}},
+institution={{NASA Goddard Space Flight Center}},
+year=2012
+}
+@misc {cetas,
+    title ={{Real-Time Big Data Predictive Analytics}},
+    author = {Cetas},
+    year = 2012,
+    howpublished = "\url{http://www.cetas.net}",
+    note = "Online; accessed 24-March-2013"
+}
