--- a/conclusion.tex
+++ b/conclusion.tex
@@ -1,5 +1,11 @@
 %!TEX root=index.tex
 \section{Conclusion}
+[ this needs more work]
+[what have i learned here]
+
+[this is my chance to underscore the most important points]
+[elasticity and focus on hadoop -- why]
+
 \climatedge, for general insurance, can succeed with a limited number of basic offerings around tornado and hail prediction without investing in anything more than a storage layer and a modern server. Implementing hail prediction is similar to tornado prediction, both in computational and data storage capacity. Planned hail forensics are even simpler, just displaying the presence or absence of hail for any given time frame. None of these fall into the big data paradigm for the basic offerings. However as research moves forward into using the \gls{merra} data to reduce uncertainty across offerings, the volumes increase substantially. Even with more complex visualizations added, such as maps or real time alerting for forensics, it is unlikely that these offerings will ever meet the definition of big data. However, that does not mean that these offerings won't benefit from running on a Data Services framework in terms of storage elasticity. \\
 
 Both the future global and domestic flood offerings will require a substantially more complex framework in order to succeed. Flood will have petabytes of satellite, radar, and news data, along with the complex analytics necessary to distill that data into forecasts.  
