--- a/index.tex
+++ b/index.tex
@@ -48,15 +48,13 @@
 % handle code formatting for the appendix
 \usepackage{listings}
 
-
 \begin{document}
     \input{title}
     \tableofcontents
     \clearpage
     \input{executive_summary}
     \input{introduction}
-    \input{tornado}
-    \input{flood}
+    \input{use_cases}
     \input{solution}
     \input{future}
     \input{conclusion}
